fix too much dot

--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -573,7 +573,7 @@
   flex-direction: column;
 }
 
-.post-meta-list .strong {
+.post-meta-list strong {
   color: var(--color-primary);
   font-size: var(--font-size-small);
   text-transform: uppercase;
